--- a/templates/includes/toasts/toast-success.html
+++ b/templates/includes/toasts/toast-success.html
@@ -5,6 +5,55 @@
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body bg-white">
-      {{ message }}
+      <div class="row">
+        <div class="col">
+          {{ message }}
+        </div>
+      </div>
+      {% if grand_total %}
+      <div class="row">
+        <div class="col mt-2">
+          <p>Your Basket ({{ product_count }})</p>
+        </div>
+      </div>
+      
+        {% for item in basket_items %}
+          <div class="row">
+            <div class="col-3">
+              {% if product.image %}
+                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+              {% else %}
+                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
+              {% endif %}
+            </div>
+            <div class="col-9">
+              <p><strong>{{ item.product.name }}</strong></p>
+              <p>Size: {% if item.product.men_sizes %}
+                {{ item.size|upper }}
+                {% elif item.product.ladies_sizes or item.product.kids_sizes or item.product.shoe_sizes or item.product.kids_shoe_sizes %}
+                {{ item.size }}
+                {% endif %}</p>
+              <p>Qty: {{ item.quantity }}</p>
+            </div>
+          </div>
+        {% endfor %}
+        <div class="row">
+          <div class="col">
+            <strong><p>
+              Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
+              <span class="float-end">£{{ total|floatformat:2 }}</span>
+            </p></strong>
+            {% if free_delivery_delta > 0%}
+              <p>Get free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!</p>
+            {% endif %}
+            <a href="{% url 'view_basket' %}" class="btn btn-blue btn-lg basket-buttons">
+              <span>Go to secure checkout</span>
+              <span>
+                <i class="fa-solid fa-lock"></i>
+              </span>
+            </a>
+          </div>
+        </div>
+      {% endif %}
     </div>
 </div>
