--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -17,7 +17,7 @@
         <div class="row mt-2">
 
             <div class="col-12 col-md-6">
-                <div class="">
+                <div>
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
                             <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
