--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                                 </span>
                             </button>
                         </div>
-                        <input class="form-control border border-start-0" type="text" name="q" placeholder="I am looking for...">
+                        <input class="form-control border border-end-0" type="text" name="q" placeholder="I am looking for...">
                     </div>
                 </form>
             </div>
