--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
+        <!-- Stripe -->
+        <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -67,7 +69,7 @@
                                 </span>
                             </button>
                         </div>
-                        <input class="form-control border border-end-0" type="text" name="q" placeholder="I am looking for...">
+                        <input class="form-control border border-start-0" type="text" name="q" placeholder="I am looking for...">
                     </div>
                 </form>
             </div>
