--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -25,3 +25,9 @@
 .stripe-style-input::placeholder {
     color: #aab7c4;
 }
+
+@media (min-width: 768px) {
+  .float-custom {
+    float: right;
+  }
+}
