Add loading overlay

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -114,9 +114,14 @@
             </div>
         </div>
     </div>
-
-
-  
+</div>
+<div id="loading-overlay">
+    <h1 class="loading-spinner text-light">
+        <span>
+            <i class="fa-solid fa-3x fa-spinner fa-spin-pulse"></i>
+        </span>
+        
+    </h1>
 </div>
 
 {% endblock %}
