--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -29,13 +29,13 @@
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
                 <fieldset>
-                    <legend class="fieldset-label small">Personal</legend>
+                    <legend class="fieldset-label small">Personal Information:</legend>
                     {{ order_form.full_name | as_crispy_field }}
                     {{ order_form.email | as_crispy_field }}
                     {{ order_form.phone_number| as_crispy_field }}
                 </fieldset>
                 <fieldset>
-                    <legend class="fieldset-label small">Delivery</legend>
+                    <legend class="fieldset-label small">Delivery Information:</legend>
                     {{ order_form.street_address1 | as_crispy_field }}
                     {{ order_form.street_address2 | as_crispy_field }}
                     {{ order_form.town_or_city | as_crispy_field }}
@@ -43,7 +43,7 @@
                     {{ order_form.postcode | as_crispy_field }}
                     {{ order_form.country | as_crispy_field }}
                 </fieldset>
-                <div class="mt-4 mb-2">
+                <div class="mt-2 mb-4">
                     <!-- Allows users to save information to profile -->
                     {% if user.is_authenticated %}
                         <label for="save-info">Save information for next time?</label>
@@ -54,12 +54,12 @@
                     {% endif %}
                 </div>
                 <fieldset>
-                    <legend class="fieldset-label small">Payment</legend>
+                    <legend class="fieldset-label small">Payment Information:</legend>
                     <!-- A Stripe card element will go here-->
                     <div id="card-element"></div>
 
                     <!-- Form errors displayed here -->
-                    <div id="card-errors" role="alert"></div>
+                    <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                 </fieldset>
                 <div class="mt-3">
                     <button id="submit-button" class="btn btn-blue btn basket-buttons">Complete order</button>
