--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -28,7 +28,7 @@
                         {% if item.product.image %}
                             <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
                         {% else %}
-                            <img src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                            <img class="img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
                         {% endif %}
                     </div>
                     <div class="col-8 col-lg-10">
