--- a/templates/includes/toasts/toast-success.html
+++ b/templates/includes/toasts/toast-success.html
@@ -20,8 +20,8 @@
         {% for item in basket_items %}
           <div class="row">
             <div class="col-3">
-              {% if product.image %}
-                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+              {% if item.product.image %}
+                <img src="{{ item.product.image.url }}" class="card-img-top" alt="{{ product.name }}">
               {% else %}
                 <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
               {% endif %}
