Finish webhook handler to get or create order info to store in db

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -60,6 +60,7 @@
 
                     <!-- Form errors displayed here -->
                     <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                    <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
                 <div class="mt-3">
                     <button id="submit-button" class="btn btn-blue btn basket-buttons">Complete order</button>
