Add crispy forms to allauth forms and change block contents

--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -9,7 +9,8 @@
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        {{ form|crispy }}
+        <button class="btn btn-blue" type="submit" name="action">{% trans "Change Password" %}</button>
+        <a class="btn btn-outline-grey" href="{% url 'account_login' %}">Back to Login</a>
     </form>
 {% endblock %}
