--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
     <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
@@ -16,8 +16,9 @@
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        {{ form|crispy }}
+        <input class="btn btn-blue" type="submit" value="{% trans 'Reset My Password' %}" />
+        <a class="btn btn-outline-grey" href="{% url 'account_login' %}">Back to Login</a>
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
