--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -4,12 +4,13 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
     <h1>{% trans "Set Password" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        {{ form|crispy }}
+        <input class="btn btn-blue" type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        <a class="btn btn-outline-grey" href="{% url 'account_login' %}">Back to Login</a>
     </form>
 {% endblock %}
