Set up nav pill tabs and add JS to display profile sections

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'profiles/profiles.css' %}">
+    <link rel="stylesheet" href="{% static 'profiles/css/profiles.css' %}">
 {% endblock %}
 
 {% block page_header %}
@@ -19,10 +19,43 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h2>My Profile</h2>
+            <h2 class="text-center">My Profile</h2>
         </div>
     </div>
-    {{ profile }}
+    <div class="row mt-4">
+        <!-- My Profile Nav Pills-->
+        <div class="col-12 col-md-5 col-lg-4 offset-xl-1">
+            <!-- Nav pills modified from Bootstrap 5 and GymFit Website -->
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <button class="nav-link profile-buttons" id="my-info-button" type="button" aria-label="Show My Info section">My Info</button>
+                </li>
+                <li class="nav-item">
+                    <button class="nav-link profile-buttons" id="order-history-button" type="button" aria-label="Show Order History section">Order History</button>
+                </li>
+                <li class="nav-item">
+                    <button class="nav-link profile-buttons" id="my-account-button" type="button" aria-label="Show My Account section">My Account</button>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'account_logout' %}" class="nav-link profile-buttons">Logout</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
+            <section id="my-info" class="profile-section">
+                <form action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form| crispy }}
+                </form>
+            </section>
+            <section id="order-history" class="profile-section">
+                <h3>Order History</h3>
+            </section>
+            <section id="my-account" class="profile-section">
+                <h3>Delete account</h3>
+            </section>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
@@ -31,5 +64,5 @@
     {{ block.super }}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+    <script src="{% static 'profiles/js/pill-menu-control.js' %}"></script>
 {% endblock %}
