--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -1,3 +1,22 @@
+#profile-update-form .form-control {
+    color: #30323d;
+}
+
+#profile-update-form input::placeholder {
+    color: #aab7c4;
+}
+
+#id_default_country,
+#id_default_country option:not(:first-child) {
+    color: #30323d;
+}
+
+#id_default_country,
+#id_default_country option:first-child {
+    color: #aab7c4;
+}
+
+
 .nav {
     display: block;
 }
@@ -10,16 +29,10 @@
     background-color: #30323d !important;
     border-color: #30323d !important;
     color: #fff !important;
-    margin: 20px 0;
+    margin: 0 0 20px;
     width: 75%;
     text-align: center;
     text-transform: uppercase;
 }
 
-
-.nav-link.profile-buttons:hover {
-    border: 2px solid #feb751 !important;
-    color: #fff;
-    background-color: #feb751 !important;
-}
 
