--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -46,13 +46,25 @@
                 <form action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form| crispy }}
+                    <button class="btn btn-blue">Update Information</button>
                 </form>
             </section>
             <section id="order-history" class="profile-section">
                 <h3>Order History</h3>
             </section>
             <section id="my-account" class="profile-section">
-                <h3>Delete account</h3>
+                <div class="row">
+                    <div class="col-12">
+                        <a href="" class="btn btn-blue">Change Password</a>
+                        
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <a href="" >Delete Account</a>
+                    </div>
+                </div>
+                
             </section>
         </div>
     </div>
@@ -62,7 +74,6 @@
 
 {% block postloadjs %}
     {{ block.super }}
-    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-    {{ client_secret|json_script:"id_client_secret" }}
     <script src="{% static 'profiles/js/pill-menu-control.js' %}"></script>
+    <script src="{% static 'profiles/js/country-field.js' %}"></script>
 {% endblock %}
