Allow users to save personal info to profile and view order history

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -161,6 +161,15 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-lg-7 text-right">
+            {% if from_profile %}
+                <a href="{% url 'profile' %}" class="btn btn-blue">Back to Profile</a>
+            {% else %}
+                <a href="" class="btn btn-grey-outline">Why don't you have a read of our latest blogs?</a>
+            {% endif %}
+        </div>
+    </div>
 </div>
 
 {% endblock %}
