--- a/templates/base.html
+++ b/templates/base.html
@@ -84,6 +84,7 @@
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
                                     <a href="" class="dropdown-item nav-options">Product Management</a>
+                                    <a href="{% url 'add_product' %}" class="dropdown-item nav-options">Add Product</a>
                                 {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item nav-options">Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item nav-options">Logout</a>
