--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -29,6 +29,7 @@
             {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
             <a href="" class="dropdown-item">Product Management</a>
+            <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
             {% endif %}
             <a href="" class="dropdown-item">Profile</a>
             <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
