--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,82 +12,98 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col text-center">
-                {% for c in current_categories %}
-                    {% if c.name == 'mens_wetsuits' and 'mens_footwear' and 'mens_accessories' %}
-                        <h2>Mens</h2>
-                    {% elif c.name == 'ladies_wetsuits' and 'ladies_footwear' and 'ladies_accessories' %}
-                        <h2>Ladies</h2>
-                    {% elif c.name == 'boys_wetsuits' and 'girls_wetsuits' and 'kids_footwear' and 'kids_accessories' %}
-                        <h2>Kids</h2>
-                    {% elif c.name == 'surfboards' and 'surf_equipment' %}
-                        <h2>Surf</h2>
-                    {% endif %}
-                {% endfor %}
-                {% for c in current_categories %}
-                    <a href="{% url 'products' %}?category={{ c.name }}" class="category-badge text-decoration-none">
-                        <span class="p-3 m-1 badge bg-light text-dark">{{ c.friendly_name }}</span>
-                    </a>
-                {% endfor %}
+    <div class="row">
+        <div class="col text-center">
+            {% for c in current_categories %}
+            {% if c.name == 'mens_wetsuits' and 'mens_footwear' and 'mens_accessories' %}
+            <h2>Mens</h2>
+            {% elif c.name == 'ladies_wetsuits' and 'ladies_footwear' and 'ladies_accessories' %}
+            <h2>Ladies</h2>
+            {% elif c.name == 'boys_wetsuits' and 'girls_wetsuits' and 'kids_footwear' and 'kids_accessories' %}
+            <h2>Kids</h2>
+            {% elif c.name == 'surfboards' and 'surf_equipment' %}
+            <h2>Surf</h2>
+            {% endif %}
+            {% endfor %}
+            {% for c in current_categories %}
+            <a href="{% url 'products' %}?category={{ c.name }}" class="category-badge text-decoration-none">
+                <span class="p-3 m-1 badge bg-light text-dark">{{ c.friendly_name }}</span>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="product-container col-12">
+            <div class="row mt-1 mb-2">
+                <div
+                    class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                    <div class="sort-select-wrapper w-50">
+                        <select id="sort-selector"
+                            class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort
+                                by...</option>
+                            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>
+                                Price (low to high)</option>
+                            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>
+                                Price (high to low)</option>
+                            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name
+                                (A-Z)</option>
+                            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>
+                                Name (Z-A)</option>
+                            <option value="category_asc"
+                                {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)
+                            </option>
+                            <option value="category_desc"
+                                {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 order-md-first">
+                    <p class="text-muted mt-3 text-center text-md-left">
+                        {% if search_term or current_categories or current_sorting != 'None_None' %}
+                        <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
+                        {% endif %}
+                        {{ products|length }} Products{% if search_term %} found for
+                        <strong>"{{ search_term }}"</strong>{% endif %}
+                    </p>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="product-container col-10 offset-1">
-                <div class="row mt-1 mb-2">
-                    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
-                        <div class="sort-select-wrapper w-50">
-                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-                                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
-                                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-                                <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
-                                <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
-                                <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-left">
-                            {% if search_term or current_categories or current_sorting != 'None_None' %}
-                                <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
-                            {% endif %}
-                            {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
-                        </p>
-                    </div>
-                </div>
-        </div>
-        <div class="row m-3">
-            {% for product in products %}
-                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card h-100 border-0">
-                        {% if product.image %}
+            <div class="col-12 col-lg-8 offset-lg-2">
+                <div class="row">
+                    {% for product in products %}
+                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card h-100 border-0">
+                            {% if product.image %}
                             <a href="{% url 'product_detail' product.id %}">
                                 <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
                             </a>
-                            
-                        {% else %}
+
+                            {% else %}
                             <a href="{% url 'product_detail' product.id %}">
                                 <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
                             </a>
-                        {% endif %}
-                        <div class="card-body pb-0 text-center">
-                            <h5 class="card-title">{{ product.name }}</h5>
-                        </div>
-                        <div class="card-footer bg-white border-0 text-center">
-                            <div class="row">
-                                <div class="col">
-                                    <p>£{{ product.price }}</p>
+                            {% endif %}
+                            <div class="card-body pb-0 text-center">
+                                <h5 class="card-title">{{ product.name }}</h5>
+                            </div>
+                            <div class="card-footer bg-white border-0 text-center">
+                                <div class="row">
+                                    <div class="col">
+                                        <p>£{{ product.price }}</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-            {% endfor %}
+            </div>
+
         </div>
-    </div>
+    
 {% endblock %}
 
 {% block postloadjs %}
