--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -33,6 +33,12 @@
                 <h3 class="mt-2">{{ product.name }}</h3>
                 <p class="basket-meta">{{ product.category.friendly_name }}</p>
                 <p>£{{ product.price }}</p>
+                {% if request.user.is_superuser %}
+                    <small>
+                        <a href="{% url 'edit_product' product.id %}">Edit</a>
+                        <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                    </small>
+                {% endif %}
                 <form action="{% url 'add_to_basket' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row mt-4">
