--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -91,8 +91,14 @@
                             </div>
                             <div class="card-footer bg-white border-0 text-center">
                                 <div class="row">
-                                    <div class="col">
+                                    <div class="col-12">
                                         <p>£{{ product.price }}</p>
+                                        {% if request.user.is_superuser %}
+                                            <small>
+                                                <a href="{% url 'edit_product' product.id %}">Edit</a>
+                                                <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                                            </small>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
