--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,13 +23,6 @@ button:hover {
     background-color: #feb751;
 }
 
-.hr-decoration {
-    position: relative;
-    left: -25px;
-    width: calc(100% + 50px);
-    height: 1px;
-}
-
 .btn-blue {
     background-color: #529afe;
     color: #fff;
@@ -56,18 +49,23 @@ button:hover {
     font-weight: 700;
 }
 
-.navbar {
+/* .navbar {
     padding: 0;
-}
+} */
 
-.navbar-light .navbar-nav .nav-link, .dropdown-item {
+.navbar-light .navbar-nav .nav-link, .dropdown-item,
+.nav-link i {
     color:#30323d
 }
 
 .nav-options {
     text-transform: uppercase;
     font-family: sans-serif;
-    font-weight: 800;
+    font-weight: 500;
+}
+
+.nav-item {
+    margin: 0 5px;
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
