--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,11 +1,11 @@
-<ul>
+<ul class="d-block d-lg-none">
     <li class="list-inline-item">
-        <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link d-block d-lg-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
                 <div><i class="fas fa-search fa-lg"></i></div>
             </div>
         </a>
-        <div class="dropdown-menu" aria-labelledby="mobile-search">
+        <div class="dropdown-menu col-12 col-md-6 offset-md-3" aria-labelledby="mobile-search">
             <form method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
                     <input class="form-control border border-$gray-500 rounded search-input" type="text" name="q" placeholder="I am looking for...">
@@ -21,7 +21,7 @@
         </div>
     </li>
     <li class="dropdown list-inline-item">
-        <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
+        <a class="nav-link d-block d-lg-none" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <div><i class="fas fa-user fa-lg"></i></div>
         </a>
