--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -12,9 +12,48 @@
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-12">
-        <h2>Blogs</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h2>Blogs</h2>
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col-12 col-lg-8 offset-lg-2">
+            <div class="row">
+                {% for post in blog %}
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="card h-100 border-0">
+                        {% if post.image %}
+                            <a href="">
+                                <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.blog_title }}">
+                            </a>
+                        {% else %}
+                            <a href="">
+                                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ post.blog_title }}">
+                            </a>
+                        {% endif %}
+                        <div class="card-body pb-0 text-center">
+                            <h5 class="card-title">{{ post.blog_title }}</h5>
+                        </div>
+                        <div class="card-footer bg-white border-0 text-center">
+                            <div class="row">
+                                <div class="col-12">
+                                    {% if request.user.is_superuser %}
+                                        <small>
+                                            <a href="">Edit</a>
+                                            <a href="" class="text-danger">Delete</a>
+                                        </small>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
 </div>
+
 {% endblock %}
