--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -51,16 +51,10 @@
                     <a class="dropdown-item" href="{% url 'products' %}?category=surf_equipment">Surf Essentials</a>
                 </div>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link nav-options" href="#" id="blog-management" role="button" data-bs-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item">
+                <a class="nav-link nav-options" href="{% url 'blogs' %}" id="blog-management" role="button">
                     Blogs
                 </a>
-                {% if request.user.is_superuser %}
-                <div class="dropdown-menu" aria-labelledby="blog-management">
-                    <a class="dropdown-item" href="">Add Blog</a>
-                </div>
-                {% endif %}
             </li>
         </ul>
     </div>
