Add container div and amend image classes

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -20,11 +20,11 @@
                 <div>
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
-                            <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                            <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
                         </a>
                     {% else %}
                         <a href="">
-                            <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
+                            <img src="{{ MEDIA_URL }}noimage.png" class="img-fluid" alt="{{ product.name }}">
                         </a>
                     {% endif %}
                 </div>
