--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
+{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -18,38 +22,38 @@
             <h2>Blogs</h2>
         </div>
     </div>
-    <div class="row mt-3">
-        <div class="col-12 col-lg-8 offset-lg-2">
-            <div class="row">
+    <div class="blog-posts">
+        <div class="blog-post">
                 {% for post in blog %}
-                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card h-100 border-0">
                         {% if post.image %}
                             <a href="">
-                                <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.blog_title }}">
+                                <div class="blog-img-container">
+                                    <img src="{{ post.image.url }}" class="blog-post-img" alt="{{ post.blog_title }}">
+                                </div>
+                                <h3 class="blog-info">{{ post.blog_title }}</h3>
+                                <p class="blog-info">{{ post.date_created }}</p>
+                                {% if request.user.is_superuser %}
+                                <small>
+                                    <a href="">Edit</a>
+                                    <a href="" class="text-danger">Delete</a>
+                                </small>
+                                {% endif %}
                             </a>
                         {% else %}
                             <a href="">
-                                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ post.blog_title }}">
+                                <div class="blog-img-container">
+                                    <img src="{{ MEDIA_URL }}noimage.png" class="blog-post-img" alt="{{ post.blog_title }}">
+                                </div>
+                                <h3 class="blog-info">{{ post.blog_title }}</h3>
+                                <p class="blog-info">{{ post.date_created }}</p>
+                                {% if request.user.is_superuser %}
+                                <small>
+                                    <a href="">Edit</a>
+                                    <a href="" class="text-danger">Delete</a>
+                                </small>
+                                {% endif %}
                             </a>
                         {% endif %}
-                        <div class="card-body pb-0 text-center">
-                            <h5 class="card-title">{{ post.blog_title }}</h5>
-                        </div>
-                        <div class="card-footer bg-white border-0 text-center">
-                            <div class="row">
-                                <div class="col-12">
-                                    {% if request.user.is_superuser %}
-                                        <small>
-                                            <a href="">Edit</a>
-                                            <a href="" class="text-danger">Delete</a>
-                                        </small>
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 {% endfor %}
             </div>
         </div>
