--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -39,7 +39,7 @@
                     <p class="blog-info">{{ post.date_created }}</p>
                     {% if request.user.is_superuser %}
                     <small>
-                        <a href="">Edit</a>
+                        <a href="{% url 'edit_blog' post.id %}">Edit</a>
                         <a href="" class="text-danger">Delete</a>
                     </small>
                     {% endif %}
@@ -53,7 +53,7 @@
                     <p class="blog-info">{{ post.date_created }}</p>
                     {% if request.user.is_superuser %}
                     <small>
-                        <a href="">Edit</a>
+                        <a href="{% url 'edit_blog' post.id %}">Edit</a>
                         <a href="" class="text-danger">Delete</a>
                     </small>
                     {% endif %}
